mcp-servers/deploy/temp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: socrata-mcp-server
  name: socrata-mcp-server
  namespace: u-workbench-ss19980
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: socrata-mcp-server
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: socrata-mcp-server-allow-all-namespaces
  namespace: u-workbench-ss19980
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: socrata-mcp-server
  policyTypes:
  - Ingress
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: socrata-mcp-server
  name: socrata-mcp-server
  namespace: u-workbench-ss19980
spec:
  host: socrata-mcp.apps.cloud.rt.nyu.edu
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: socrata-mcp-server
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: socrata-mcp-server
  name: socrata-mcp-server
  namespace: u-workbench-ss19980
spec:
  containers:
  - image: ghcr.io/nyu-rts/socrata-mcp-server:sha-a896f040a4de976e86a6a70abf8dd9ca5630b314
    name: socrata-mcp-server
    ports:
    - containerPort: 8000
    resources:
      limits:
        cpu: "1"
        memory: 512M
      requests:
        cpu: 250m
        memory: 256M
